Replace JDK 11 String.isBlank() with trim().isEmpty()